# prtp

./: .gitignore  requirements.txt
install/: local_setup.sh  setup.sh
log/: latest_build
sketches/esp32_main/: esp32_main.ino
src/slam_esp32/: package.xml  setup.cfg  setup.py
src/slam_esp32/config/: nav2_params.yaml  slam_config.yaml
src/slam_esp32/launch/: slam_esp32.launch.py
src/slam_esp32/slam_esp32/: cmd_vel_sender.py  lidar_bridge.py  odom_bridge.py  robot_bridge.py
src/slam_esp32/slam_esp32/launch/: navigation.launch.py  slam_esp32.launch.py
ui/: test_ui.py
