<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_esp32</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nepike@todo.todo">nepike</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>

  <exec_depend>python3-pyserial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
